--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -17,9 +17,9 @@
         <button class="group1" id="com_button" onclick="startCOM()">Iniciar</button>
         <button class="group2" disabled="true" id="close_button" onclick="closeCOM()">Fechar Conexão</button>
         <br>
-        <button class="group2" disabled="true" id="stop_button" onclick="sendCOM('STOP')">STOP</button>
-        <button class="group2" disabled="true" id="temp_button" onclick="getCOM('GET_TEMPERATURE')">TEMPERATURA</button>
-        <button class="group2" disabled="true" id="mtbf_button" onclick="getCOM('GET_MTBF')">MTBF</button>
+        <button class="group2" disabled="true" id="stop_button" onclick="sendCOM('3')">STOP</button>
+        <button class="group2" disabled="true" id="temp_button" onclick="getCOM('2')">TEMPERATURA</button>
+        <button class="group2" disabled="true" id="mtbf_button" onclick="getCOM('1')">MTBF</button>
         <br>
         
         <script src="renderer.js"></script>
